...

/// String literals to be used throughout the app
extension VLTLiterals {
    /// String literals for FeatureListViewController
    class FeatureListVCLiterals {
        /// Title for FeatureListViewController
        static let title = "Home"
    }

    /// String literals for CameraViewController
    class CameraVCLiterals {
        /// Title for CameraViewController
        static let title = VLTLiterals.DemoFeatureLiterals.cameraTitle
...
        private static let couldNotAdd = "Could not add"
        private static let failedToUpdate = "Failed to update"
        private static let couldNotRemove = "Could not remove"

        // MARK: - Marker Texts
        // Marker titles
        static let markerText = "Marker"
        static let markerPlural = "markers"
        static let marker1Title = "\(markerText) 1"
        static let marker2Title = "\(markerText) 2"
        static let marker3Title = "\(markerText) 3"
        static let marker5Title = "\(markerText) 5"
        // Marker subtitles
...
        static let addMarkerErrorMessage = "\(couldNotAdd) \(markerPlural)"
        static let updateMarkerErrorMessage = "\(failedToUpdate) \(markerPlural)"
        static let removeMarkerErrorMessage = "\(couldNotRemove) \(markerPlural)"

        // MARK: - Circle Texts
        // Circle titles
        static let circleText = "Circle"
        static let circlePlural = "circles"
        static let circle1Title = "\(circleText) 1"
        // Circle subtitles
        static let circle1Subtitle = "\(circleText) 1 \(shapeSubtitle)"
        // Circle errors
        static let addCircleErrorMessage = "\(couldNotAdd) \(circlePlural)"
        static let updateCircleErrorMessage = "\(failedToUpdate) \(circlePlural)"
        static let removeCircleErrorMessage = "\(couldNotRemove) \(circlePlural)"

        // MARK: - Polyline Texts
        // Polyline title
        static let polylineText = "Polyline"
        static let polylineTitle = "\(polylineText) \(shapeTitle)"
        // Polyline subtitle
        static let polylineSubtitle = "\(polylineText) \(shapeSubtitle)"
        // Polyline errors
        static let addPolylineErrorMessage = "\(couldNotAdd) \(polylineText)"
        static let updatePolylineErrorMessage = "\(failedToUpdate) \(polylineText)"
        static let removePolylineErrorMessage = "\(couldNotRemove) \(polylineText)"

        // MARK: - Polygon Texts
        // Polygon title
        static let polygonText = "Polygon"
        static let polygonTitle = "\(polygonText) \(shapeTitle)"
        // Polygon subtitle
        static let polygonSubtitle = "\(polygonText) \(shapeSubtitle)"
        // Polygon errors
        static let addPolygonErrorMessage = "\(couldNotAdd) \(polygonText)"
        static let updatePolygonErrorMessage = "\(failedToUpdate) \(polygonText)"
...
        static let addMarkersErrorMessage = "Failed to add markers"
    }

    /// String literals for DemoFeatures enum
    class DemoFeatureLiterals {
        /// Demo Feature Titles
        static let welcomeTitle = "Welcome."
        static let cameraTitle = "Camera"
        static let modesTitle = "Modes"
        static let userLocationTitle = "User Location"
        static let shapesTitle = "Shapes"
        static let geoJsonTitle = "GeoJSON"
        static let listenersTitle = "Listeners"
        static let relativePositioningTitle = "Relative Positioning"
        static let boundingBoxTitle = "Bounding Box"
        static let mapboxTitle = "Mapbox Integration"
        static let navigationTitle = "Navigation"

        /// Demo Feature Content
        static let welcomeContent = "Welcome to the VLT Demo Application, view our supported functionality below."
        static let cameraContent = "Use camera controls to programmatically set, manage and limit user zoom, tilt and bearing."
        static let modesContent = "Verizon map modes show fresh day-time map tiles in multiple styles(e.g. - day, day 3D, night, night 3D, satellite, etc.) with additional options including incidents or traffic flow."
        static let userLocationContent = "Display your real-time location, anywhere in the world."
...
