...
                                                <rect key="frame" x="0.0" y="0.0" width="106" height="14.5"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Zoom Level:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AWq-lT-UAe">
                                                        <rect key="frame" x="0.0" y="0.0" width="69" height="14.5"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
...
                                                <rect key="frame" x="0.0" y="22.5" width="78.5" height="14.5"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bearing:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H6x-Xm-FTI">
                                                        <rect key="frame" x="0.0" y="0.0" width="47" height="14.5"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
...
                                                <rect key="frame" x="0.0" y="45" width="53" height="14.5"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tilt:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w8d-W8-KZb">
                                                        <rect key="frame" x="0.0" y="0.0" width="21.5" height="14.5"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="42" height="43.5"/>
                                                <color key="tintColor" name="Secondary"/>
                                                <state key="normal" image="plus" catalog="system">
                                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="medium" weight="regular"/>
                                                </state>
...
                                                <rect key="frame" x="0.0" y="44.5" width="42" height="43.5"/>
                                                <color key="tintColor" name="Secondary"/>
                                                <state key="normal" image="minus" catalog="system">
                                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="medium" weight="regular"/>
                                                </state>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                <state key="normal" title="Update">
                                                    <color key="titleColor" name="Primary"/>
                                                </state>
...
