...
                                <rect key="frame" x="12" y="92" width="390" height="29"/>
                                <color key="backgroundColor" name="Background"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="28" id="Dbs-ZN-i91"/>
                                </constraints>
                                <segments>
                                    <segment title="Day"/>
                                    <segment title="Day 3D"/>
                                    <segment title="Dark"/>
                                    <segment title="Dark 3D"/>
                                    <segment title="Satellite"/>
                                </segments>
                                <color key="selectedSegmentTintColor" name="Primary"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="1"/>
                                    </userDefinedRuntimeAttribute>
...
                                                    <color key="tintColor" name="Nav_MapView_ButtonTint"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="31" id="Z0W-O2-u2V"/>
                                                        <constraint firstAttribute="height" constant="31" id="aF6-fd-310"/>
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Traffic Flow" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints
                                                    <rect key="frame" x="39" y="0.0" width="183" height="31"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="slJ-v7-pmz">
...
                                                    <color key="tintColor" name="Nav_MapView_ButtonTint"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="31" id="Ymd-n1-l4e"/>
                                                        <constraint firstAttribute="height" constant="31" id="g2d-L0-TxJ"/>
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Traffic Incidents" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9tp-hZ-Rj0">
                                                    <rect key="frame" x="39" y="0.0" width="122.5" height="31"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <view autoresizesSubviews="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nhj-Jl-ftX" userLabel="Placing View">
...
