...
    var pointGeoJSON: VLTGeoJSON?
    var vltCustomImage: VLTImage?

    /// GeoJSON data that encompasses multiple GeoJSON objects in a single FeatureCollection
    var mixedGeoJSONData = Data.from(fileNamed: "MixedFeatureCollection", withExtension: ".json")
    /// GeoJSON data that encompasses a MultiPolyline object in a FeatureCollection
    var polylineGeoJSONData = Data.from(fileNamed: "Polylines", withExtension: ".json")
    /// GeoJSON data that encompasses a MultiPolygon object in a FeatureCollection
    var polygonGeoJSONData = Data.from(fileNamed: "Polygons", withExtension: ".json")
    /// GeoJSON data that encompasses a MultiPoint object in a FeatureCollection
    var multiPointImageGeoJSONData = Data.from(fileNamed: "Points", withExtension: ".json")

    /// Subscriber that listens for changes in the featureVisibility object and updates the mix label
...
